--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "ixudra/curl": "^6.22",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^3.4"
+        "laravel/ui": "^3.4",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^2.3.6",
